unpackaged/main/default/objects/Audit_Finding__c/Audit_Finding__c.object-meta.xml
<CustomObject>
    <label>Audit Finding</label>
    <nameField>
        <displayFormat>AF-{00000}</displayFormat>
        <label>Audit Finding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Findings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>