unpackaged/main/default/objects/Audit_Finding__c/fields/Finding_Type__c.field-meta.xml
<CustomField>
        <fullName>Finding_Type__c</fullName>
        <label>Finding Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OOS</fullName>
                </value>
                <value>
                    <fullName>Non conformance</fullName>
                </value>
                <value>
                    <fullName>OOT</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Deviation</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>EHS/Facilities</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>