unpackaged/main/default/objects/Audit_Finding__c/fields/Response__c.field-meta.xml
<CustomField>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>