unpackaged/main/default/objects/Audit_Finding__c/validationRules/do_not_add_new_findings_on_closed_audit.validationRule-meta.xml
<ValidationRule>
        <fullName>do_not_add_new_findings_on_closed_audit</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Audit__r.CMPL123_WF_Action__c == "Close" , ISNEW() )</errorConditionFormula>
        <errorMessage>Cannot Add a New Audit Findings for the Closed Audit</errorMessage>
    </ValidationRule>