unpackaged/main/default/objects/Audit_Finding__c/validationRules/Prevent_Edit_Audit_findings_cancel_audit.validationRule-meta.xml
<ValidationRule>
        <fullName>Prevent_Edit_Audit_findings_cancel_audit</fullName>
        <active>true</active>
        <errorConditionFormula>Audit__r.CMPL123_WF_Status__c =="Canceled - Audit"</errorConditionFormula>
        <errorMessage>Record Locked</errorMessage>
    </ValidationRule>