unpackaged/main/default/objects/Audit_Finding__c/validationRules/Prevent_edit_create_audit_is_approved.validationRule-meta.xml
<ValidationRule>
        <fullName>Prevent_edit_create_audit_is_approved</fullName>
        <active>false</active>
        <errorConditionFormula>Audit__r.Is_Audit_Approved__c</errorConditionFormula>
        <errorMessage>Audit findings cannot be added or edited after audit has been approved.</errorMessage>
    </ValidationRule>