unpackaged/main/default/objects/Audit_Finding__c/validationRules/Response_should_not_be_blank.validationRule-meta.xml
<ValidationRule>
        <fullName>Response_should_not_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(CMPL123_WF_Action__c)&amp;&amp; CMPL123_WF_Action__c =="Submit Response" &amp;&amp; ISBLANK( Response__c )</errorConditionFormula>
        <errorMessage>Please fill the Response field before performing the Submit response action.</errorMessage>
    </ValidationRule>